--- a/app/src/main/res/menu/activity_mostrar.xml
+++ b/app/src/main/res/menu/activity_mostrar.xml
@@ -1,9 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menu_settings"
+        android:id="@+id/menu_edit"
         android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="@string/edit"/>
+    <item
+        android:id="@+id/menu_delete"
+        android:orderInCategory="200"
         android:showAsAction="never"
-        android:title="@string/menu_settings"/>
+        android:title="@string/delete"/>
 
 </menu>
