--- a/app/src/main/res/menu/activity_add_edit.xml
+++ b/app/src/main/res/menu/activity_add_edit.xml
@@ -1,9 +1,10 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:compat="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/menu_save"
         android:orderInCategory="100"
-        android:showAsAction="always"
+        compat:showAsAction="always"
         android:title="@string/save"
         android:icon="@drawable/save48"
         />
