--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -1,10 +1,11 @@
 <menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:compat="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/menu_add"
         android:orderInCategory="100"
-        android:showAsAction="always"
+        compat:showAsAction="always"
         android:icon="@drawable/plus48"
         android:title="@string/add"
         />
