--- a/app/src/main/res/menu/activity_mostrar.xml
+++ b/app/src/main/res/menu/activity_mostrar.xml
@@ -1,14 +1,16 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:compat="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/menu_edit"
         android:orderInCategory="100"
-        android:showAsAction="always"
+        compat:showAsAction="always"
+        android:icon="@drawable/edit48"
         android:title="@string/edit"/>
     <item
         android:id="@+id/menu_delete"
         android:orderInCategory="200"
-        android:showAsAction="never"
+        compat:showAsAction="never"
         android:title="@string/delete"/>
 
 </menu>
